[project]
name = "lab1"
version = "0.1.0"
description = ""
authors = [
    {name = "ghMellow",email = "nicotermins@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "numpy (>=2.3.3,<3.0.0)",
    "torch (>=2.8.0,<3.0.0)",
    "torchviz (>=0.0.3,<0.0.4)",
    "torchvision (>=0.23.0,<0.24.0)",
    "certifi (>=2025.10.5,<2026.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"
jupyter = "^1.1.1"
